
syntax = "proto3";

import "common.proto";

package backup;

option go_package = "github.com/QutaqKicker/ChatParser/Protos/gen/go/backup;backupv1";

service Backup {
  rpc ExportToDir (ExportToDirRequest) returns (ExportToDirResponse);
}

message ExportToDirRequest {
  ExportType Type = 2;
  common.MessagesFilter MessageFilter = 3;
}

message ExportToDirResponse {
  bool Ok = 1;
}

enum ExportType{
  CSV = 0;
  PARQUET = 1;
}